syntax = "proto3";

package Contracts.Services.Communication.Protobuf;

import "Abstractions/Abstractions.proto";

service CommunicationService {
  rpc ListEmails(ListNotificationsRequest) returns (Notifications);
}

message Notification {
  string id = 1;
  repeated NotificationMethod methods = 2;
}

message NotificationMethod{
  oneof option {
    Email email = 2;
    Sms sms = 3;
    PushMobile pushMobile = 4;
    PushWeb pushWeb = 5;
  }
}

message Email {
  string Address = 1;
}

message Sms {
  string Number = 1;
}

message PushWeb {
  string UserId = 1;
}

message PushMobile {
  string DeviceId = 1;
}

message ListNotificationsRequest {
  Abstractions.Protobuf.Paging Paging = 1;
}

message Notifications {
  repeated Notification Items = 1;
  Abstractions.Protobuf.Page Page = 2;
}